infra/manifests/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservices-metrics
    monitoring: microservices-metrics
  annotations:
    alpha.monitoring.coreos.com/non-namespaced: "true"
  name: microservices-metrics
  namespace: microservices
spec:
  ports:
  - name: http-metrics
    port: 8080
    targetPort: 8081
    protocol: TCP
  selector:
    monitoring-group: microservices-metrics
