infra/manifests/auction-house-primary-async.dev.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: v1
kind: Service
metadata:
  name: auction-house-primary-async
  namespace: microservices
spec:
  selector:
    app: auction-house-primary-async
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auction-house-primary-async
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - auction-house-primary-async.local
  rules:
  - host: auction-house-primary-async.local
    http:
      paths:
      - backend:
          serviceName: auction-house-primary-async
          servicePort: 443
        path: /
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auction-house-primary-async
  namespace: microservices
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: auction-house-primary-async
    spec:
      containers:
        - name: auction-house-primary-async
          image: docker-registry.local/auction-house-primary-async
          resources:
            limits:
              memory: "192Mi"
          ports:
            - containerPort: 8080
