infra/manifests/auction-house-primary-sync.prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: v1
kind: Service
metadata:
  name: auction-house-primary-sync
  namespace: microservices
spec:
  selector:
    app: auction-house-primary-sync
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auction-house-primary-sync
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - auctions.beyondthehype.pl
  rules:
  - host: auctions.beyondthehype.pl
    http:
      paths:
      - backend:
          serviceName: auction-house-primary-sync
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auction-house-primary-sync
  namespace: microservices
spec:
  replicas: 1 #todo replicas
  template:
    metadata:
      labels:
        app: auction-house-primary-sync
        monitoring-group: microservices-metrics
    spec:
      nodeSelector:
        nodetype: microservices
      containers:
        - name: auction-house-primary-sync
          image: quay.io/virtuslab/auction-house-primary-sync
          resources:
            limits:
              memory: "384Mi"
          ports:
            - containerPort: 8080
            - containerPort: 8081
