infra/manifests/billing-service-secondary-async.dev.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service-secondary-async
  namespace: microservices
spec:
  selector:
    app: billing-service-secondary-async
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: billing-service-secondary-async
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - billing-service-secondary-async.local
  rules:
  - host: billing-service-secondary-async.local
    http:
      paths:
      - backend:
          serviceName: billing-service-secondary-async
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: billing-service-secondary-async
  namespace: microservices
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: billing-service-secondary-async
        monitoring-group: microservices-metrics
    spec:
      containers:
        - name: billing-service-secondary-async
          image: docker-registry.local/billing-service-secondary-async
          resources:
            limits:
              memory: "192Mi"
          ports:
            - containerPort: 8080
            - containerPort: 8081
