infra/manifests/identity-service-tertiary-async.dev.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service-tertiary
  namespace: microservices
spec:
  selector:
    app: identity-service-tertiary
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: identity-service-tertiary
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - identity-service-tertiary.local
  rules:
  - host: identity-service-tertiary.local
    http:
      paths:
      - backend:
          serviceName: identity-service-tertiary
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: identity-service-tertiary
  namespace: microservices
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: identity-service-tertiary
        monitoring-group: microservices-metrics
    spec:
      containers:
        - name: identity-service-tertiary
          image: docker-registry.local/identity-service-tertiary-async
          resources:
            limits:
              memory: "192Mi"
          ports:
            - containerPort: 8080
            - containerPort: 8081
