infra/manifests/identity-service-tertiary-async.prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service-tertiary
  namespace: microservices
spec:
  selector:
    app: identity-service-tertiary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: identity-service-tertiary
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - identity.beyondthehype.pl
  rules:
  - host: identity.beyondthehype.pl
    http:
      paths:
      - backend:
          serviceName: identity-service-tertiary
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: identity-service-tertiary
  namespace: microservices
spec:
  replicas: 1 #todo replicas
  template:
    metadata:
      labels:
        app: identity-service-tertiary
        monitoring-group: microservices-metrics
    spec:
      nodeSelector:
        nodetype: microservices
      containers:
        - name: identity-service-tertiary
          image: quay.io/virtuslab/identity-service-tertiary-async
          resources:
            limits:
              memory: "384Mi"
          ports:
            - containerPort: 8080
            - containerPort: 8081
