infra/manifests/payment-system.prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: v1
kind: Service
metadata:
  name: payment-system
  namespace: microservices
spec:
  selector:
    app: payment-system
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payment-system
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - payment.beyondthehype.pl
  rules:
  - host: payment.beyondthehype.pl
    http:
      paths:
      - backend:
          serviceName: payment-system
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payment-system
  namespace: microservices
spec:
  replicas: 3 # TODO decide if scale out?
  template:
    metadata:
      labels:
        app: payment-system
    spec:
      nodeSelector:
        nodetype: microservices
      containers:
        - name: payment-system
          image: quay.io/virtuslab/payment-system
          resources:
            limits:
              memory: "256Mi"
          ports:
            - containerPort: 8080
            - containerPort: 8081
