infra/manifests/registry.dev.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: docker
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: docker
spec:
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 443
      targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: docker
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  tls:
  - hosts:
      - docker-registry.local
    secretName: registry
  rules:
  - host: docker-registry.local
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 443
        path: /
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
  namespace: docker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: docker-data
          mountPath: /var/lib/registry
      volumes:
        - name: docker-data
          emptyDir: {}
  selector:
    matchLabels:
      app: registry
